--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -35,9 +35,11 @@
     <div class="wrapper">
         {{>header}}
         {{>menu}}
-        <!-- Content Wrapper. Contains page content -->
-        {{{body}}}
-        <!-- /.content-wrapper -->
+       <div class="content-wrapper">
+            <!-- Content Wrapper. Contains page content -->
+            {{{body}}}
+            <!-- /.content-wrapper -->
+        </div>
         {{>footer}}
 
 
