--- a/src/resources/views/partials/menu.hbs
+++ b/src/resources/views/partials/menu.hbs
@@ -34,13 +34,14 @@
                     </a>
                     <ul class="nav nav-treeview">
                         <li class="nav-item">
-                            <a href="#" class="nav-link ">
+                            <a href="/dictionary" class="nav-link ">
+                                
                                 <i class="far nav-icon"></i>
                                 <p>2020</p>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">
+                            <a href="###" class="nav-link">
                                 <i class="far nav-icon"></i>
                                 <p>2021</p>
                             </a>
