--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -28,6 +28,25 @@
     <!-- summernote -->
     <link rel="stylesheet" href="/plugins/summernote/summernote-bs4.min.css">
 
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <style>
+        /* Make the image fully responsive */
+        .carousel-inner img {
+            width: 100%;
+            height: 100%;
+        }
+
+        .carousel-caption {
+            top: 0;
+            bottom: auto;
+            color: black;
+            margin-top: -14px;
+        }
+    </style>
+
 
 </head>
 
@@ -35,7 +54,7 @@
     <div class="wrapper">
         {{>header}}
         {{>menu}}
-       <div class="content-wrapper">
+        <div class="content-wrapper">
             <!-- Content Wrapper. Contains page content -->
             {{{body}}}
             <!-- /.content-wrapper -->
