--- a/src/resources/views/loading.hbs
+++ b/src/resources/views/loading.hbs
@@ -15,3 +15,37 @@
     </div><!-- /.container-fluid -->
 </div>
 <!-- /.content-header -->
+<!-- Main content -->
+<div id="demo" class="carousel slide" data-ride="carousel">
+
+  <!-- Indicators -->
+  <ul class="carousel-indicators">
+    <li data-target="#demo" data-slide-to="0" class="active"></li>
+    <li data-target="#demo" data-slide-to="1"></li>
+    <li data-target="#demo" data-slide-to="2"></li>
+  </ul>
+  
+  <!-- The slideshow -->
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="img/Capture.PNG" alt="Los Angeles" width="1100" height="500">
+      <div class="carousel-caption">
+        <h3>Los Angeles</h3>
+      </div>   
+    </div>
+    <div class="carousel-item">
+      <img src="img/Capture1.PNG" alt="Chicago" width="1100" height="500">
+      <div class="carousel-caption">
+        <h3>Los Angeles</h3>
+      </div>   
+    </div>
+  </div>
+  
+  <!-- Left and right controls -->
+  <a class="carousel-control-prev" href="#demo" data-slide="prev">
+    <span class="carousel-control-prev-icon"></span>
+  </a>
+  <a class="carousel-control-next" href="#demo" data-slide="next">
+    <span class="carousel-control-next-icon"></span>
+  </a>
+</div>
