--- a/src/resources/views/partials/menu.hbs
+++ b/src/resources/views/partials/menu.hbs
@@ -1,7 +1,7 @@
 <!-- Main Sidebar Container -->
 <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
-    <a href="index.html" class="brand-link">
+    <a href="/" class="brand-link">
         <img src="img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
             style="opacity: .8">
         <span class="brand-text font-weight-light">Policy Deployment</span>
@@ -34,7 +34,7 @@
                     </a>
                     <ul class="nav nav-treeview">
                         <li class="nav-item">
-                            <a href="/dictionary" class="nav-link ">
+                            <a href="/dict" class="nav-link ">
                                 
                                 <i class="far nav-icon"></i>
                                 <p>2020</p>
