--- a/src/resources/views/loading.hbs
+++ b/src/resources/views/loading.hbs
@@ -1,51 +1,237 @@
 <!-- Content Header (Page header) -->
 <div class="content-header">
-    <div class="container-fluid">
-        <div class="row mb-2">
-            <div class="col-sm-6">
-                <h1 class="m-0">Dictionary 2020</h1>
-            </div><!-- /.col -->
-            <div class="col-sm-6">
-                <ol class="breadcrumb float-sm-right">
-                    <li class="breadcrumb-item"><a href="#">Dictionary</a></li>
-                    <li class="breadcrumb-item active">2020</li>
-                </ol>
-            </div><!-- /.col -->
-        </div><!-- /.row -->
-    </div><!-- /.container-fluid -->
+  <div class="container-fluid">
+    <div class="row mb-2">
+      <div class="col-sm-6">
+        <h1 class="m-0">Dictionary</h1>
+      </div><!-- /.col -->
+      <div class="col-sm-6">
+        <ol class="breadcrumb float-sm-right">
+          <li class="breadcrumb-item"><a href="#">Dictionary</a></li>
+          <li class="breadcrumb-item active">2020</li>
+        </ol>
+      </div><!-- /.col -->
+    </div><!-- /.row -->
+  </div><!-- /.container-fluid -->
 </div>
 <!-- /.content-header -->
-<!-- Main content -->
-<div id="demo" class="carousel slide" data-ride="carousel">
 
-  <!-- Indicators -->
-  <ul class="carousel-indicators">
-    <li data-target="#demo" data-slide-to="0" class="active"></li>
-    <li data-target="#demo" data-slide-to="1"></li>
-    <li data-target="#demo" data-slide-to="2"></li>
-  </ul>
-  
-  <!-- The slideshow -->
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="img/Capture.PNG" alt="Los Angeles" width="1100" height="500">
-      <div class="carousel-caption">
-        <h3>Los Angeles</h3>
-      </div>   
-    </div>
-    <div class="carousel-item">
-      <img src="img/Capture1.PNG" alt="Chicago" width="1100" height="500">
-      <div class="carousel-caption">
-        <h3>Los Angeles</h3>
-      </div>   
+{{!-- Timeline by Month --}}
+<!-- == classnames were based on context of project == -->
+<div class="wrap">
+  <div class="timeline-wrap">
+    <h2 class="timeline-title">VJ Policy Deployment</h2>
+    <p style="text-align:center;">(Click on an item in the timeline for more interaction)</p>
+    <ul class="timeline">
+      <li class="timeline-item bmw">
+        <div class="p-timeline-item">
+          <time class="p-timeline-date" datetime="2019-05-01">Jan 2021</time>
+          <span class="p-timeline-carmodel" data-car="1">Item 1</span>
+          <div class="p-timeline-block"></div>
+        </div>
+      </li>
+      <li class="timeline-item mini">
+        <div class="p-timeline-item">
+          <time class="p-timeline-date" datetime="2019-06-01">Feb 2021</time>
+          <span class="p-timeline-carmodel" data-car="2">Item 2</span>
+          <div class="p-timeline-block"></div>
+        </div>
+      </li>
+      <li class="timeline-item mini">
+        <div class="p-timeline-item">
+          <time class="p-timeline-date" datetime="2019-07-01">Mar 2021</time>
+          <span class="p-timeline-carmodel" data-car="3">Ttem 3</span>
+          <div class="p-timeline-block"></div>
+        </div>
+      </li>
+      <li class="timeline-item bmw">
+        <div class="p-timeline-item">
+          <time class="p-timeline-date" datetime="2019-08-01">Apr 2021</time>
+          <span class="p-timeline-carmodel" data-car="4">Item 4</span>
+          <div class="p-timeline-block"></div>
+        </div>
+      </li>
+      <li class="timeline-item bmw">
+        <div class="p-timeline-item">
+          <time class="p-timeline-date" datetime="2019-09-01">May 2021</time>
+          <span class="p-timeline-carmodel" data-car="5">Item 5</span>
+          <div class="p-timeline-block"></div>
+        </div>
+      </li>
+      <li class="timeline-item bmw">
+        <div class="p-timeline-item">
+          <time class="p-timeline-date" datetime="2019-10-01">June 2021</time>
+          <span class="p-timeline-carmodel" data-car="6">Item 6</span>
+          <div class="p-timeline-block"></div>
+        </div>
+      </li>
+      <li class="timeline-item bmw">
+        <div class="p-timeline-item">
+          <time class="p-timeline-date" datetime="2019-11-01">July 2021</time>
+          <span class="p-timeline-carmodel" data-car="7">Item 7</span>
+          <div class="p-timeline-block"></div>
+        </div>
+      </li>
+      <li class="timeline-item mini">
+        <div class="p-timeline-item">
+          <time class="p-timeline-date" datetime="2019-12-01">Aug 2021</time>
+          <span class="p-timeline-carmodel" data-car="8">Item 8</span>
+          <div class="p-timeline-block"></div>
+        </div>
+      </li>
+      <li class="timeline-item mini">
+        <div class="p-timeline-item">
+          <time class="p-timeline-date" datetime="2019-12-01">Oct 2021</time>
+          <span class="p-timeline-carmodel" data-car="8">Item 8</span>
+          <div class="p-timeline-block"></div>
+        </div>
+      </li>
+      <li class="timeline-item mini">
+        <div class="p-timeline-item">
+          <time class="p-timeline-date" datetime="2019-12-01">Nov 2021</time>
+          <span class="p-timeline-carmodel" data-car="8">Item 8</span>
+          <div class="p-timeline-block"></div>
+        </div>
+      </li>
+      <li class="timeline-item mini">
+        <div class="p-timeline-item">
+          <time class="p-timeline-date" datetime="2019-12-01">Dec 2021</time>
+          <span class="p-timeline-carmodel" data-car="8">Item 8</span>
+          <div class="p-timeline-block"></div>
+        </div>
+      </li>
+    </ul>
+    <div class="timeline-content">
+
+      <div class="p-timeline-content" data-car="1">
+          <img src= "/img/Capture.PNG"  />
+      </div>
+      <div class="p-timeline-content" data-car="2">
+          <img src= "/img/Capture1.PNG"  />
+      </div>
+      <div class="p-timeline-content" data-car="3">
+        <div class="timeline-content-card">
+          <h3 class="timeline-content-title bmw">Item 3</h3>
+          <time class="timeline-content-date" datetime="2019-07-01">Release date: July 1, 2019</time>
+          <p> L Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean
+            massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam
+            felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo,
+            fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae,
+            justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper
+            nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.
+            Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius
+            laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies
+            nisi. Nam eget dui. </p>
+          <a class="btn btn-btn-oranje timeline-content-button" href="javascript:void();" title="Lees meer">Read
+            more</a>
+          <div class="close" data-type-close></div>
+        </div>
+        <div class="timeline-content-image">
+          <img src="https://via.placeholder.com/500x200/ed9300/fff" alt="placeholder" />
+        </div>
+      </div>
+      <div class="p-timeline-content" data-car="4">
+        <div class="timeline-content-card">
+          <h3 class="timeline-content-title bmw">Item 4</h3>
+          <time class="timeline-content-date" datetime="2019-08-01">Release date: August 1, 2019</time>
+          <p> BL Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean
+            massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam
+            felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo,
+            fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae,
+            justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper
+            nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.
+            Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius
+            laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies
+            nisi. Nam eget dui. </p>
+          <a class="btn btn-blauw timeline-content-button" href="javascript:void();" title="Lees meer">Read more</a>
+          <div class="close" data-type-close></div>
+        </div>
+        <div class="timeline-content-image">
+          <img src="https://via.placeholder.com/900x900/1C69D4/fff" alt="placeholder" />
+        </div>
+      </div>
+      <div class="p-timeline-content" data-car="5">
+        <div class="timeline-content-card">
+          <h3 class="timeline-content-title bmw">Item 5</h3>
+          <time class="timeline-content-date" datetime="2019-09-01">Release date: September 1, 2019</time>
+          <p> L Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean
+            massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam
+            felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo,
+            fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae,
+            justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper
+            nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.
+            Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius
+            laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies
+            nisi. Nam eget dui. </p>
+          <a class="btn btn-blauw timeline-content-button" href="javascript:void();" title="Lees meer">Read more</a>
+          <div class="close" data-type-close></div>
+        </div>
+        <div class="timeline-content-image">
+          <img src="https://via.placeholder.com/900x1200/1C69D4/fff" alt="placeholder" />
+        </div>
+      </div>
+      <div class="p-timeline-content" data-car="6">
+        <div class="timeline-content-card">
+          <h3 class="timeline-content-title bmw">Item 6</h3>
+          <time class="timeline-content-date" datetime="2019-10-01">Release date: October 1, 2019</time>
+          <p> BL Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean
+            massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam
+            felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo,
+            fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae,
+            justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper
+            nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.
+            Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius
+            laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies
+            nisi. Nam eget dui. </p>
+          <a class="btn btn-blauw timeline-content-button" href="javascript:void();" title="Lees meer">Read more</a>
+          <div class="close" data-type-close></div>
+        </div>
+        <div class="timeline-content-image">
+          <img src="https://via.placeholder.com/600x500/1C69D4/fff" alt="placeholder" />
+        </div>
+      </div>
+      <div class="p-timeline-content" data-car="7">
+        <div class="timeline-content-card">
+          <h3 class="timeline-content-title bmw">Item 7</h3>
+          <time class="timeline-content-date" datetime="2019-11-01">Release date: November 1, 2019</time>
+          <p> L Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean
+            massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam
+            felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo,
+            fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae,
+            justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper
+            nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.
+            Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius
+            laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies
+            nisi. Nam eget dui. </p>
+          <a class="btn btn-blauw timeline-content-button" href="javascript:void();" title="Lees meer">Read more</a>
+          <div class="close" data-type-close></div>
+        </div>
+        <div class="timeline-content-image">
+          <img src="https://via.placeholder.com/900x500/1C69D4/fff" alt="placeholder" />
+        </div>
+      </div>
+      <div class="p-timeline-content" data-car="8">
+        <div class="timeline-content-card">
+          <h3 class="timeline-content-title mini">Item 8</h3>
+          <time class="timeline-content-date" datetime="2019-12-01">Release date: December 1, 2019</time>
+          <p> BL Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean
+            massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam
+            felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo,
+            fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae,
+            justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper
+            nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.
+            Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius
+            laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies
+            nisi. Nam eget dui. </p>
+          <a class="btn btn-btn-oranje timeline-content-button" href="javascript:void();" title="Lees meer">Read
+            more</a>
+          <div class="close" data-type-close></div>
+        </div>
+        <div class="timeline-content-image">
+          <img src="https://via.p laceholder.com/900x500/ed9300/fff" alt="placeholder" />
+        </div>
+      </div>
     </div>
   </div>
-  
-  <!-- Left and right controls -->
-  <a class="carousel-control-prev" href="#demo" data-slide="prev">
-    <span class="carousel-control-prev-icon"></span>
-  </a>
-  <a class="carousel-control-next" href="#demo" data-slide="next">
-    <span class="carousel-control-next-icon"></span>
-  </a>
 </div>
+
